--- a/plugins_convenient.html
+++ b/plugins_convenient.html
@@ -61,8 +61,13 @@
                         target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>限制遊戲FPS</p>
-                    <img src="image/Chill Frames01.jpg" alt=""
-                        class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/Chill Frames01.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
+
                 </div>
                 <div class="commonFormat mt-5" id="GentleTouch">
                     <div class="plugintitle d-flex align-items-center mb-3">
