--- a/plugins_cool.html
+++ b/plugins_cool.html
@@ -65,7 +65,12 @@
                         <a href="https://github.com/avafloww/OopsAllLalafells" class="btn btn-outline-secondary"
                             role="button">插件原網址</a>
                     </div>
-                    <img src="image/llfell.jpg" alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/llfell.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <p>可以把路人都變拉拉肥(或其他種族)</p>
                 </div>
                 <div class="commonFormat mt-5" id="Orchestrion">
@@ -77,7 +82,12 @@
                     <img src="https://github.com/ff-meli/OrchestrionPlugin/raw/master/gh/orch.gif" alt="" class="img-fluid imagebigback">
                     <p>更換/顯示地圖BGM，捅自己刀用(編號871.898媽qaq) </br>
                         <a href="https://docs.qq.com/sheet/DVURCZmhwc1pFbUt6?tab=BB08J2">歌曲翻譯對照表</a> 表格內的網站很實用的樣子.jpg</p>
-                    <img src=" https://github.com/lmcintyre/OrchestrionPlugin/blob/main/images/image1.png?raw=true" alt="" class="img-fluid imagebigback">
+                        <div class="mix d-flex">
+                            <div class="spinner-border m-3" role="status" visibility="visible">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
+                            <img data-src="https://github.com/lmcintyre/OrchestrionPlugin/blob/main/images/image1.png?raw=true" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                        </div>
                 </div>
                 <div class="commonFormat mt-5" id="Penumbra">
                     <div class="plugintitle d-flex align-items-center mb-3">
