--- a/plugins_cup.html
+++ b/plugins_cup.html
@@ -64,11 +64,26 @@
                     <p>提示玩家回報的S/A怪物狩獵，支持FATE回報，並且可設定接收整個大區的通知還是當前的伺服器<br>
                         ▶可選擇收到指定FATE通知
                     </p>
-                    <img src="image/xl setting 09.jpg" alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/xl setting 09.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <P>座標會顯示在指定聊天欄</P>
-                    <img src="image/xl setting 10.jpg" alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/xl setting 10.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <P>設定視窗</P>
-                    <img src="image/xl setting 11.jpg" alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/xl setting 11.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <P>▶視窗"/sonar"可直接看到剩餘血量或進度<br>
                         ▶按鈕分別是傳送座標至聊天欄/在地圖插旗/刪除這則通知<br>
                         ▶視窗可點開詳細地圖座標<br>
@@ -83,14 +98,26 @@
                          class="btn btn-outline-secondary ms-3"  target="_blank" role="button">巴哈詳細介紹</a>
                     </div>
                     <p>幻卡小抄</p>
-                    <img src="https://github.com/MgAl2O4/FFTriadBuddyDalamud/raw/main/assets/image1.png" alt=""
-                        class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="https://github.com/MgAl2O4/FFTriadBuddyDalamud/raw/main/assets/image1.png" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <P>告訴你下一步該何去何從</P>
-                    <img src="https://github.com/MgAl2O4/FFTriadBuddyDalamud/raw/main/assets/image2.png" alt=""
-                        class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="https://github.com/MgAl2O4/FFTriadBuddyDalamud/raw/main/assets/image2.png" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <P>使用你現有的卡牌幫你組合最優選</P>
-                    <img src="https://github.com/MgAl2O4/FFTriadBuddyDalamud/raw/main/assets/image3.png" alt=""
-                        class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="https://github.com/MgAl2O4/FFTriadBuddyDalamud/raw/main/assets/image3.png" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <P>告訴你卡片要去哪裡拿，點選按鈕幫你插旗</P>
                 </div>
                 <div class="commonFormat mt-5" id="Tourist">
@@ -108,22 +135,47 @@
                         target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>日常任務提醒小助手</p>
-                    <img src="https://user-images.githubusercontent.com/9083275/154887762-1ee6eea4-c292-422c-af42-5dfa144e5744.png"
-                        alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="https://user-images.githubusercontent.com/9083275/154887762-1ee6eea4-c292-422c-af42-5dfa144e5744.png" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <p class="mt-3">目前有的分類</p>
                     <div class="row">
-                        <div class="col-md-6">
-                            <img src="image/daily01.jpg" alt="" class="img-fluid mb-2 imgnoJq" max-width="100%">
+                        <div class="mix d-flex col-md-6">
+                            <div class="spinner-border m-3" role="status" visibility="visible">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
+                            <img data-src="image/daily01.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
                         </div>
-                        <div class="col-md-6">
-                            <img src="image/daily02.jpg" alt="" class="img-fluid mb-2 imgnoJq" max-width="100%">
+                        <div class="mix d-flex col-md-6">
+                            <div class="spinner-border m-3" role="status" visibility="visible">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
+                            <img data-src="image/daily02.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
                         </div>
                     </div>
-                    <img src="image/daily03.jpg" alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/daily03.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <p>設定打開後每一個都可以自訂登入提示在聊天欄/換區域聊天欄提醒</p>
-                    <img src="image/daily04.jpg" alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/daily04.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <p>隨機任務列表</p>
-                    <img src="image/daily05.jpg" alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/daily05.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <p>小窗設定</p>
                 </div>
                 <div class="commonFormat mt-5" id="Gather">
@@ -133,8 +185,12 @@
                         target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>包含採集系三種職業限刻、隱藏、天氣條件、魚餌查詢功能，點擊名稱可以直接傳送最近傳點，外部網站上可以查到的資料這插件幾乎都有</p>
-                    <img src="image/gather01.jpg"
-                        alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/gather01.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <p class="mt-3">通用設定</p>
                     <div class="row">
                         <div class="col-md-6">
@@ -151,9 +207,19 @@
                         </div>
                     </div>
                     <p class="mt-3">插件小窗提醒（三種職業共用）</p>
-                    <img src="image/gather04.jpg" alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/gather04.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <p>有聲音提醒，基本上就是複製要監控的名稱添加就好了</p>
-                    <img src="image/gather05.jpg" alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/gather05.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <p>釣魚時間軸：拋下魚餌時出現該地區魚種，用於紀錄拋鉤幾秒後那些魚會上鉤</p>
                 </div>
             </div>
