--- a/plugins_map.html
+++ b/plugins_map.html
@@ -65,7 +65,12 @@
                         <br>
                         /coord x座標 y座標 [地圖名稱] 地圖名稱可省略
                     </p>
-                    <img src="image/chatcoordinates.jpg" alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/chatcoordinates.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                 </div>
                 <div class="commonFormat mt-5" id="Globetrotter">
                     <div class="plugintitle d-flex align-items-center mb-3">
@@ -75,7 +80,12 @@
                     </div>
                     <p>藏寶圖打開後自動標示點位，可以設定點開寶圖或滑鼠滑過道具標示
                     </p>
-                    <img src="image/xl setting 07.jpg" alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/xl setting 07.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                 </div>
                 <div class="commonFormat mt-5" id="MapLinker">
                     <div class="plugintitle d-flex align-items-center mb-3">
@@ -84,7 +94,12 @@
                             role="button">插件原網址</a>
                     </div>
                     <p>紀錄在聊天欄中的座標，可搭配<a href="#Teleporter">Teleporter</a>一起使用直接一鍵傳送最近的水晶</p>
-                    <img src="image/xl setting 08.jpg" alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/xl setting 08.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                 </div>
                 <div class="commonFormat mt-5" id="Teleporter">
                     <div class="plugintitle d-flex align-items-center mb-3">
