--- a/plugins_song.html
+++ b/plugins_song.html
@@ -62,8 +62,12 @@
                         target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>幻想盤翻牌子提示</p>
-                    <img src="https://github.com/daemitus/FauxHollowsSolver/raw/master/res/demo.png" alt=""
-                        class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="https://github.com/daemitus/FauxHollowsSolver/raw/master/res/demo.png" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                 </div>
                 <div class="commonFormat mt-5" id="ezMiniCactpot">
                     <div class="plugintitle d-flex align-items-center mb-3">
@@ -73,10 +77,18 @@
                     </div>
                     <p>金蝶刮刮樂明牌，但還是要看運氣，人雖起來連個789都沒有</p>
                     <div class="row">
-                        <img src="https://github.com/daemitus/MiniCactpotSolver/raw/master/res/demo_tiles.png" alt=""
-                            class="img-fluid col-md-6 imagebigback">
-                        <img src="https://github.com/daemitus/MiniCactpotSolver/raw/master/res/demo_lines.png" alt=""
-                            class="img-fluid col-md-6 imagebigback">
+                        <div class="mix d-flex col-md-6">
+                            <div class="spinner-border m-3" role="status" visibility="visible">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
+                            <img data-src="https://github.com/daemitus/MiniCactpotSolver/raw/master/res/demo_tiles.png" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                        </div>
+                        <div class="mix d-flex col-md-6">
+                            <div class="spinner-border m-3" role="status" visibility="visible">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
+                            <img data-src="https://github.com/daemitus/MiniCactpotSolver/raw/master/res/demo_lines.png"  alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                        </div>
                     </div>
                 </div>
                 <div class="commonFormat mt-5" id="ezWondrousTails">
@@ -86,8 +98,12 @@
                         target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>空想帳機率提示</p>
-                    <img src="https://github.com/daemitus/WondrousTailsSolver/raw/master/res/demo.png" alt=""
-                        class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="https://github.com/daemitus/WondrousTailsSolver/raw/master/res/demo.png" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                 </div>
 
                 <div class="commonFormat mt-5" id="market">
@@ -98,7 +114,12 @@
                     </div>
                     <p>查詢物品價格，但需要玩家有打開板子更新價格，準確度取決於伺服器使用Dalamud的人數<br>
                         "/pmb"打開查價介面，滑鼠移到物品上即可查詢價格</p>
-                    <img src="image/xl setting 05.jpg" alt="" class="img-fluid imagebigback">
+                        <div class="mix d-flex">
+                            <div class="spinner-border m-3" role="status" visibility="visible">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
+                            <img data-src="image/xl setting 05.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                        </div>
                 </div>
                 <div class="commonFormat mt-5" id="Housemate">
                     <div class="plugintitle d-flex align-items-center mb-3">
@@ -108,7 +129,13 @@
                     </div>
                     <p>顯示室內外裝修道具的名字</p>
                     <a href="image/xl setting 12.png" target="_blank">
-                        <img src="image/xl setting 12.png" alt="" class="img-fluid imagebigback"></a>
+                        <div class="mix d-flex">
+                            <div class="spinner-border m-3" role="status" visibility="visible">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
+                            <img data-src="image/xl setting 12.png" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                        </div>
+                    </a>
                 </div>
                 <div class="commonFormat mt-5" id="BDTH">
                     <div class="plugintitle d-flex align-items-center mb-3">
@@ -131,8 +158,13 @@
                     </p>
 
                     <a href="image/xl setting 12.png" target="_blank">
-                        <img src="https://camo.githubusercontent.com/a6b2506f0ffa053c7807feed4ecf4e2f368b5fc30ec5815d56e6e37085ce18af/68747470733a2f2f692e696d6775722e636f6d2f41647a6e55794a2e706e67"
-                            alt="" class="img-fluid imagebigback"></a>
+                        <div class="mix d-flex">
+                            <div class="spinner-border m-3" role="status" visibility="visible">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
+                            <img data-src="https://camo.githubusercontent.com/a6b2506f0ffa053c7807feed4ecf4e2f368b5fc30ec5815d56e6e37085ce18af/68747470733a2f2f692e696d6775722e636f6d2f41647a6e55794a2e706e67" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
