--- a/plugins_ui.html
+++ b/plugins_ui.html
@@ -65,8 +65,12 @@
                         target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>顯示玩家說話時頭頂的泡泡，也可用於RP店分辨誰在說話，設定可隱藏自己的泡泡跟決定顯示的方式</p>
-                    <img src="https://github.com/Haplo064/ChatBubbles/blob/main/ChatBubbles/images/image1.png?raw=true"
-                        alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="https://github.com/Haplo064/ChatBubbles/blob/main/ChatBubbles/images/image1.png?raw=true" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                 </div>
                 <div class="commonFormat mt-5" id="Visibility">
                     <div class="plugintitle d-flex align-items-center mb-3">
@@ -76,7 +80,12 @@
                     </div>
                     <p>取消顯示其他玩家、寵物、召喚獸或路型鳥(有中文介面)<br>
                     "/pvis"呼叫設定介面</p>
-                    <img src="image/xl setting 03.jpg" alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/xl setting 03.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                 </div>
                 <div class="commonFormat mt-5" id="Glamaholic">
                     <div class="plugintitle d-flex align-items-center mb-3">
@@ -96,7 +105,12 @@
                         6.1更新了類似的功能
                       </div>
                     <p>在物品底部區域標註是否已解鎖，只會出現在如樂譜、寵物等可以解鎖物品中。</p>
-                    <img src="image/xl setting 04.jpg" alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/xl setting 04.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                 </div>
                 <div class="commonFormat mt-5" id="qolbar">
                     <div class="plugintitle d-flex align-items-center mb-3">
@@ -115,10 +129,20 @@
                         </svg>
                         若有安裝畫面濾鏡建議先關閉濾鏡顯示，否則跨螢幕時容易閃退
                     </div>
-                    <img src="image/qolbar.jpg" alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/qolbar.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <p>不只可以放表情，可以放文字、切換職業、喊話巨集等各種發揮創意玩法(?)<br>
                     <a href="https://discord.gg/3NMcUV5" target="_blank"><i class="bi bi-discord"></i> 羊圈DC</a>會有很多人分享他們的QoLbar</p>
-                    <img src="image/qolbar02.jpg" alt=""      class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/qolbar02.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <p class="fs-5 text-muted fw-bold mt-3">快捷欄通用設定</p>
                     <div class="row">
                         <div class="col-md-6 text-center">
@@ -137,7 +161,12 @@
                     ▶若勾選點擊互動（應該是點擊透過才對），則快捷欄無法使用下拉選單、無法互動<br>
                     點選導入會導入剪貼簿的代碼，所以點擊導入之前先複製需要導入的代碼到剪貼簿。</p>
                     <p class="fs-5 text-muted fw-bold mt-3">Shortcut設定</p>
-                    <img src="image/qol03.jpg" alt=""      class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/qol03.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                     <ul class="py-2">
                         <li>Name－"::"後面的數字是icon編號，點右下角放大鏡可以打開icon資源庫，後面加"##"(顯示的名稱)滑鼠移入可顯示提示</li>
                         <li>Command－類似寫巨集的地方，可以寫指令，右鍵可以添加遊戲內特殊符號<br>
@@ -235,7 +264,12 @@
                         target="_blank" role="button">插件原網址</a>
                     </div>
                     <p>顯示遊戲的Ping</p>
-                    <img src="https://raw.githubusercontent.com/karashiiro/PingPlugin/master/Assets/1.png" alt="" class="img-fluid imagebigback">
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="https://raw.githubusercontent.com/karashiiro/PingPlugin/master/Assets/1.png" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                 </div>
             </div>
         </div>
