更新simple tweak常用設置/聊天U化

--- a/plugins_tweak.html
+++ b/plugins_tweak.html
@@ -168,76 +168,126 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">9</th>
+                                    <td>Duty Ready Class Switching</td>
+                                    <td>進副本的畫面點icon自動切職業</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">10</th>
+                                    <td>Equip Recommended Command</td>
+                                    <td>輸入/equiprecommended自動穿上當前職業最強裝備</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">11</th>
+                                    <td>Estate List Command</td>
+                                    <td>輸入/estatelist <玩家ID>跳出房屋傳送介面</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">12</th>
                                     <td>修復/target 命令</td>
                                     <td>允許使用/target 命令選中玩家角色或NPC</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">10</th>
+                                    <th scope="row">13</th>
                                     <td>固定影子距離</td>
                                     <td>設定影子距離的值以防止其在飛行中變化</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">11</th>
+                                    <th scope="row">14</th>
+                                    <td>Hide Hotbar Lock</td>
+                                    <td>隱藏快捷欄的鎖頭，可以選擇是否按著shift來顯示</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">15</th>
                                     <td>Hide Mouse Cursor After Inactivity</td>
                                     <td>不活動時隱藏滑鼠</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">12</th>
+                                    <th scope="row">16</th>
                                     <td>Improved Crafting Log</td>
                                     <td>修改製作日誌中的合成按鈕以切換工作或從製作位置站起來，允許您在不關閉製作日誌的情況下停止製作。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">13</th>
+                                    <th scope="row">17</th>
                                     <td>增加角色預覽縮放距離</td>
                                     <td>增加角色預覽的縮放距離，比如“試穿”和“調查”</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">14</th>
+                                    <th scope="row">18</th>
                                     <td>顯示婚禮長頭紗</td>
                                     <td>婚禮頭紗顯示加長版本</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">15</th>
+                                    <th scope="row">19</th>
                                     <td>快捷指令命令</td>
-                                    <td>在宏和聊天頻道中，使用'/maincommand[name]來執行任意的快捷指令</td>
+                                    <td>在宏和聊天頻道中，使用/maincommand[name]來執行任意的快捷指令</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">16</th>
+                                    <th scope="row">20</th>
                                     <td>更多套装槽位</td>
                                     <td>增加可儲存的裝備套裝數量到100</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">17</th>
+                                    <th scope="row">21</th>
+                                    <td>No Sell List</td>
+                                    <td>可自訂義無法被賣出的物品</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">22</th>
+                                    <td>Open Adventurer Plate Command</td>
+                                    <td>輸入/playerplate [角色ID]來查看玩家的角色卡頁面</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">23</th>
                                     <td>Open commendation window automatically</td>
                                     <td>副本結束自動打開點讃畫面</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">18</th>
+                                    <th scope="row">24</th>
                                     <td>自動打開戰利品分配窗口</td>
                                     <td>當在副本內有獲得新物品時,自動打開戰利品分配窗口。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">19</th>
+                                    <th scope="row">25</th>
+                                    <td>Quick Sell Items at Vendors</td>
+                                    <td>設置Shift/ctrl/alt+滑鼠右鍵來快速販售物品</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">26</th>
+                                    <td>Refresh Market Prices</td>
+                                    <td>收到"請稍候再嘗試搜索"信息後，嘗試獲取價格。</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">27</th>
+                                    <td>Remember Quick Gathering</td>
+                                    <td>Remembers quick gathering status even after gathering at unspoiled nodes.(跟採集有關吧...)即使在未受破壞的節點上收集後，也能記住快速收集狀態。</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">28</th>
+                                    <td>Screenshot File Name by PunishedPineapple</td>
+                                    <td>更改截圖的文件名格式。</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">29</th>
                                     <td>聊天框快捷指令</td>
                                     <td>添加數個聊天框指令以快速修改遊戲設置</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">20</th>
+                                    <th scope="row">30</th>
                                     <td>Show process id Command</td>
                                     <td>顯示當前進程ID</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">21</th>
+                                    <th scope="row">31</th>
                                     <td>Sync Crafter Bars</td>
                                     <td>讓相同效果的生產系技能放同一位置</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">22</th>
+                                    <th scope="row">32</th>
                                     <td>Sync Gatherer Bars</td>
                                     <td>讓相同效果的礦工園藝技能放同一位置</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">23</th>
+                                    <th scope="row">33</th>
                                     <td>Try On Correct Item</td>
                                     <td>按住Shift試穿投影前的物品
                                         <div class="mix d-flex">
@@ -299,21 +349,36 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">3</th>
+                                    <td>Disable Auto Chat Inputs</td>
+                                    <td>防止遊戲在聊天框中插入<`flag>或其他參數。</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">4</th>
                                     <td>禁止聊天窗口移動</td>
                                     <td></td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">4</th>
+                                    <th scope="row">5</th>
+                                    <td>Hide Chat Panel Buttons</td>
+                                    <td>隱藏聊天日誌名稱，並在主窗口分割的面板上關閉按鈕。</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">6</th>
+                                    <td>Improved Font Sizes</td>
+                                    <td>允許您更改聊天窗口的字體大小，並允許對接聊天選項卡，以保持它們的字體大小與主選項卡分開。</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">7</th>
                                     <td>重命名聊天欄</td>
                                     <td>可以重新命名General跟Battle標鐵</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">5</th>
+                                    <th scope="row">8</th>
                                     <td>Reply Channel Switch</td>
                                     <td>輸入/r將頻道跳轉到私訊回覆</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">6</th>
+                                    <th scope="row">9</th>
                                     <td>智能聊天訊息滾動</td>
                                     <td>向上滾動時收到新訊息防止自動跳轉</td>
                                 </tr>
