更新simple tweak跟分享連結標題

--- a/plugins_cup.html
+++ b/plugins_cup.html
@@ -21,13 +21,13 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://magejiaaa.github.io/Amaurot_garden/">
-    <meta property="og:title" content="亞馬烏羅提後花園">
+    <meta property="og:title" content="Dalamud｜成就相關－亞馬烏羅提後花園">
     <meta property="og:description" content="Dalamud的各種研究筆記，包含FF14的第三方插件介紹與界面粗略翻譯。">
-    <meta property="og:site_name" content="亞馬烏羅提後花園">
+    <meta property="og:site_name" content="Dalamud｜成就相關－亞馬烏羅提後花園">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://magejiaaa.github.io/Amaurot_garden/">
-    <meta property="twitter:title" content="亞馬烏羅提後花園">
+    <meta property="twitter:title" content="Dalamud｜成就相關－亞馬烏羅提後花園">
     <meta property="twitter:description" content="Dalamud的各種研究筆記，包含FF14的第三方插件介紹與界面粗略翻譯。">
     <meta property="twitter:image" content="https://i.imgur.com/tcf5eaU.png">
     <!-- CSS -->
