--- a/head.html
+++ b/head.html
@@ -21,6 +21,12 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="plugins_ui.html">插件介紹</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">第三方插件</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="index.html#card_menu">視距解鎖</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="question.html">常見問題</a>
                 </li>
