--- a/plugins_menu.html
+++ b/plugins_menu.html
@@ -1,4 +1,4 @@
-<div class="col-md-4 col-lg-3 ps-sm-5 mt-5 accordion accordion-flush pt-5 fixed-top secondmenu "
+<div class="col-md-4 col-lg-3 ps-sm-5 mt-5 accordion accordion-flush pt-5 px-2 fixed-top secondmenu "
     id="accordionFlushExample">
     <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingOne">
