增加第三方&simpletweak分類

--- a/head.html
+++ b/head.html
@@ -24,7 +24,11 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">第三方插件</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="index.html#card_menu">視距解鎖</a></li>
+                        <li><a class="dropdown-item" href="third_plugins.html#cammy">視距解鎖</a></li>
+                        <li><a class="dropdown-item" href="third_plugins.html#SlothCombo">超猛連擊</a></li>
+                        <li><a class="dropdown-item" href="third_plugins.html#XIVAuras">buff CD增強</a></li>
+                        <li><a class="dropdown-item" href="third_plugins.html#Penumbra">Penumbra</a></li>
+                        <li><a class="dropdown-item" href="third_plugins.html#Glamourer">Glamourer</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
